fix wrong vertical alignment of pinned tabs

--- a/src/tabbar/tabbar.scss
+++ b/src/tabbar/tabbar.scss
@@ -79,6 +79,10 @@
   margin-bottom: 0 !important;
   padding-bottom: 0 !important;
 
+  // prevent absolutely positioned pinned tabs from overflowing
+  position: relative;
+  overflow: clip;
+
   /* special case for pinned tabs when overflowing */
   &:not([overflow]) .tabbrowser-tab:not([first-visible-tab]),
   &[overflow] .tabbrowser-tab:not([first-visible-tab]):not([pinned]) {
@@ -87,11 +91,6 @@
 
   &[overflow] .tabbrowser-tab[pinned] .tab-background {
     margin: 0 -1px !important;
-  }
-
-  &[overflow] .tabbrowser-tab[pinned] .tab-stack {
-    margin-top: 8px !important;
-    margin-bottom: 0 !important;
   }
 
   &[overflow] .tabbrowser-tab[pinned] + .tabbrowser-tab:not([pinned]) .tab-content::before {
@@ -143,6 +142,19 @@
     .tabbrowser-tab[last-visible-tab]:not([visuallyselected]):not(:hover):not([multiselected])
     .tab-content::after {
     opacity: var(--tab-separator-opacity) !important;
+  }
+
+  :root:not([privatebrowsingmode='temporary'], [firefoxviewhidden])
+    :is(toolbarbutton, toolbarpaletteitem)
+    + &,
+  :root[privatebrowsingmode='temporary']:not([firefoxviewhidden])
+    :is(
+      toolbarbutton:not(#firefox-view-button),
+      toolbarpaletteitem:not(#wrapper-firefox-view-button)
+    )
+    + & {
+    // increase padding for pinned tab rounded bottom corners
+    padding-inline-start: calc(var(--tab-overflow-pinned-tabs-width) + 6px) !important;
   }
 }
 
